# santa-racer-cpp

./: .gitignore  CMakeLists.txt  README.md  makefile  stats
assets/data/: char_widths.txt  chimneys.txt  level.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
data/: level_objects.txt
src/: Angel.cpp  Args.cpp  Balloon.cpp  Chimney.cpp  Cloud.cpp  Cloud.hpp  Config.cpp  Draw.cpp  Draw.hpp  Finish.cpp  Game.cpp  Game.hpp  Gift.cpp  Globals.hpp  Goblin.cpp  Goblin.hpp  GoblinSnowball.cpp  Landscape.cpp  Level.cpp  Level.hpp  LevelObject.cpp  LevelObject.hpp  Mask.cpp  Output.cpp  Output.hpp  Random.cpp  SantaRacer.cpp  Score.cpp  Score.hpp  Setup.cpp  Setup.hpp  Sleigh.cpp  Sleigh.hpp  SleighStar.cpp  Snowflake.cpp  Snowman.cpp  Snowman.hpp  SnowmanStar.cpp  Sound.cpp  Sound.hpp  (+58 more)
src/SantaRacer/: Angel.cpp  Args.cpp  Args.hpp  Balloon.cpp  Balloon.hpp  Chimney.cpp  Chimney.hpp  Cloud.cpp  Config.cpp  Draw.cpp  Finish.cpp  Game.cpp  Game.hpp  Gift.cpp  Gift.hpp  Globals.hpp  Goblin.cpp  GoblinSnowball.cpp  Landscape.cpp  Landscape.hpp  Level.cpp  Level.hpp  LevelObject.cpp  LevelObject.hpp  Main.cpp  Mask.cpp  Mask.hpp  Options.cpp  Options.hpp  Output.cpp  Output.hpp  Printer.cpp  Printer.hpp  Printer.inl  RNG.cpp  RNG.hpp  Random.cpp  Random.hpp  SantaRacer.cpp  Score.cpp  (+15 more)
src/SantaRacer/Asset/: AssetLibrary.hpp  AssetLibrary.inl  DataLibrary.cpp  DataLibrary.hpp  Image.cpp  Image.hpp  ImageLibrary.cpp  ImageLibrary.hpp  Music.cpp  Music.hpp  MusicLibrary.cpp  MusicLibrary.hpp  Sound.cpp  Sound.hpp  SoundLibrary.cpp  SoundLibrary.hpp
src/SantaRacer/LevelObject/: Angel.cpp  Angel.hpp  Balloon.cpp  Balloon.hpp  Chimney.cpp  Chimney.hpp  Cloud.cpp  Cloud.hpp  Finish.cpp  Finish.hpp  Goblin.cpp  Goblin.hpp  GoblinSnowball.cpp  GoblinSnowball.hpp  LevelObject.cpp  LevelObject.hpp  SleighStar.cpp  SleighStar.hpp  Snowman.cpp  Snowman.hpp  SnowmanStar.cpp  SnowmanStar.hpp
